<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Notes</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="label_password">Password:</string>
    <string name="label_login">Enter login and password:</string>
    <string name="hint_login">Login</string>
    <string name="hint_password">Password</string>
    <string name="hint_passwordrep">Password again</string>
    <string name="button_login">Login</string>
    <string name="button_registration">Register</string>
    <string name="title_activity_notes">Notes</string>
    <string name="label_registration">Registration of new user:</string>
    <string name="lable_reppassword">Repeat password:</string>
    <string name="hint_oldpassword">Old password</string>
    <string name="hint_newpassword">New password</string>
    <string name="button_changepass">Change password</string>
    <string name="hint_noteheader">Note header</string>
    <string name="hint_notetext">Note text</string>
    <string name="tab_login">Login</string>
    <string name="tab_registration">Registration</string>
    <string name="demo_butt">Demo</string>
    <string name="add_note">Add note</string>
    <string name="new_note">New note</string>
    <string name="submitnote_button">Add</string>

</resources>
