<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/textAppearanceMedium"
        android:layout_marginBottom="@dimen/item_vertical_margin"
        android:text="@string/label_registration" />

    <EditText
        android:id="@+id/registration_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/item_vertical_margin"
        android:hint="@string/hint_login" />
    
    <EditText
        android:password="true"
        android:id="@+id/registration_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/item_vertical_margin"
        android:hint="@string/hint_password" />
    
    <EditText
        android:password="true"
        android:id="@+id/registration_passrep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/item_vertical_margin"
        android:hint="@string/hint_passwordrep" />
    
    <Button 
        android:id="@+id/registration_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_registration"
        />
    

</LinearLayout>