<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	
    

    <EditText
        android:password="true"
        android:id="@+id/passchange_oldpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/item_vertical_margin"
        android:hint="@string/hint_oldpassword" />
    
    <EditText
        android:password="true"
        android:id="@+id/passchange_newpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/item_vertical_margin"
        android:hint="@string/hint_newpassword" />
    
    <EditText
        android:password="true"
        android:id="@+id/passchange_newpassrep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/item_vertical_margin"
        android:hint="@string/hint_passwordrep" />
    
    <Button 
        android:id="@+id/passchange_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_registration"
        />
    

</LinearLayout>